--- a/Detection.ipynb
+++ b/Detection.ipynb
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1355,7 +1355,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 51%|████████████████████████████████████████▎                                      | 644/1261 [41:06<39:22,  3.83s/it]"
+      "\n",
+      "  0%|                                                                                         | 0/1261 [00:00<?, ?it/s]"
      ]
     }
    ],
@@ -1363,7 +1364,7 @@
     "resetPipe()\n",
     "output4 = 'project_video_out_improved.mp4'\n",
     "clip4 = VideoFileClip(\"project_video.mp4\")\n",
-    "proc_clip4 = clip4.fl_image(process_image) \n",
+    "proc_clip4 = clip4.fl_image(process_image_improved) \n",
     "%time proc_clip4.write_videofile(output4, audio=False)\n",
     "clip4.reader.close()\n",
     "clip4.audio.reader.close_proc()"
@@ -1371,19 +1372,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'output4' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-25-bacc16f01691>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m   \u001b[1;33m<\u001b[0m\u001b[0msource\u001b[0m \u001b[0msrc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"{0}\"\u001b[0m\u001b[1;33m>\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m<\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mvideo\u001b[0m\u001b[1;33m>\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \"\"\".format(output4))\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'output4' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "\n",
+       "<video width=\"960\" height=\"540\" controls>\n",
+       "  <source src=\"project_video_out_improved.mp4\">\n",
+       "</video>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
